--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -81,7 +81,7 @@
 
             <div class="columns-container mobile-reverse">
                 <div class="column right-column">
-                    <img src="Document/CvLivioOsouf.png" alt="Logo" class="logo" style="height: 80%;width: 80%; border: 1px black solid; border-radius: 10px;">
+                    <a href="Document/CvLivioOsouf.pdf" target="_blank"><img src="Document/CvLivioOsouf.png" alt="Logo" class="document"></a>
                 </div>
                 <div class="column left-column">
                     <h2>Mon parcours scolaire</h2>
