ajout compte rendu projet site marchand

--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -141,11 +141,11 @@
                                     </ul>  
                                     <p><i>osouf-livio.fr/Shop/Accueil/</i></p>
                                     <a href="https://osouf-livio.fr/Shop/Accueil/" target="_blank" class="button">Voir le site</a>
+                                    <a href="Document/OSOUF_Livio_CompteRendu_SiteMarchand.pdf" target="_blank" class="button">Voir le compte rendu</a>
                                 </div>
                             </div>
                             <img src="Images/Logo/Php.png" alt="Projet 5" class="project-image">
                         </div>
-
                         <div class="project-card" onclick="toggleDetails(this)">
                             <div class="project-overlay">
                                 <span class="toggle-text">Voir plus</span>
