--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -127,6 +127,29 @@
                                 <span class="toggle-text">Voir plus</span>
                             </div>
                             <div class="project-content">
+                                <h3>Création d'une application de gestion</h3>
+                                <h4>Développement d'application windows</h4>
+                                <p>Développement de la partie administrateur d'un site marchand</p>
+                                <div class="project-details" style="display: none;">
+                                    <h4>Technologies utilisées</h4>
+                                    <ul>
+                                        <li>WPF</li>
+                                        <li>MVVM</li>
+                                        <li>EntityFramework</li>
+                                        <li>C#</li>
+                                        <li>Xaml</li>
+                                        <li>MySQL</li>
+                                    </ul>  
+                                    <a href="Error/" target="_blank" class="button">Voir le compte rendu</a>
+                                </div>
+                            </div>
+                            <img src="Images/Logo/WPF.png" style="border-radius:0;" alt="Projet 8" class="project-image">
+                        </div>
+                        <div class="project-card" onclick="toggleDetails(this)">
+                            <div class="project-overlay">
+                                <span class="toggle-text">Voir plus</span>
+                            </div>
+                            <div class="project-content">
                                 <h3>Création de site web marchand</h3>
                                 <h4>Développement Web</h4>
                                 <p>Développement d'un site web marchand fictif permettant de simuler une expérience d'achat en ligne complète</p>
@@ -144,7 +167,7 @@
                                     <a href="Document/OSOUF_Livio_CompteRendu_SiteMarchand.pdf" target="_blank" class="button">Voir le compte rendu</a>
                                 </div>
                             </div>
-                            <img src="Images/Logo/Php.png" alt="Projet 5" class="project-image">
+                            <img src="Images/Logo/Php.png" alt="Projet 7" class="project-image">
                         </div>
                         <div class="project-card" onclick="toggleDetails(this)">
                             <div class="project-overlay">
@@ -163,7 +186,7 @@
                                     <a href="https://association-apres.fr/" target="_blank" class="button">Voir le site</a>
                                 </div>
                             </div>
-                            <img src="Images/Logo/Html.png" alt="Projet 5" class="project-image">
+                            <img src="Images/Logo/Html.png" alt="Projet 6" class="project-image">
                         </div>
                         <div class="project-card" onclick="toggleDetails(this)">
                             <div class="project-overlay">
@@ -264,6 +287,7 @@
                                         <li>Instalation d'un windows</li>
                                     </ul>  
                                     <p><i>Assemblage et instalation d'un pc pour mon usage personel.</i></p>
+                                    <a href="Details/index.html#projet1" target="_blank" class="button">Voir le compte rendu</a>
                                 </div>
                             </div>
                             <img src="Images/Logo/PC.png" alt="Projet 1" class="project-image">
