--- a/Portfolio/Details/index.html
+++ b/Portfolio/Details/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projets</title>
-    <link rel="stylesheet" href="../CSS/StyleAccueil.css">
+    <link rel="stylesheet" href="../CSS/StyleDetails.css">
     <link rel="icon" href="../Images/Logo/Dev.png" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
