Debut détails projets

--- a/Portfolio/Details/index.html
+++ b/Portfolio/Details/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projets</title>
+    <link rel="stylesheet" href="../CSS/StyleAccueil.css">
     <link rel="stylesheet" href="../CSS/StyleDetails.css">
     <link rel="icon" href="../Images/Logo/Dev.png" type="image/x-icon">
 
@@ -25,9 +26,9 @@
         <div class="column2 nav-column">
             <nav>
                 <ul class="nav-links">
-                    <li><a href="#Accueil" class="active">Accueil</a></li>
+                    <li><a href="#Accueil">Accueil</a></li>
                     <li><a href="#Profil">Profil</a></li>
-                    <li><a href="#Projet">Projets</a></li>
+                    <li><a href="#Projet" class="active">Projets</a></li>
                     <li><a href="#BTSSIO">BTS SIO</a></li>
                     <li><a href="#SituationProfessionnelle">Expériences Professionnelles</a></li>
                     <li><a href="#Veilletechnologique">Veille technologique</a></li>
@@ -98,8 +99,187 @@
                     <li>...3</li>
                 </ul>
                 <p class="description"><i>Application développée en équipe pour l'entreprise IDConseils pendant mon apprentissage de BTS SIO.</i></p>
+                <a href="../Document/CompteRenduGustavMobile.pdf" target="_blank" class="button">Voir le compte rendu</a>
             </div>
-        </div>           
+        </div>   
+        <div class="projet" id="projet3">
+            <div class="projet-header">
+                <div class="projet-image">
+                    <img src="../Images/Logo/Figma.png" alt="DotNet">
+                </div>
+                <div class="projet-title">
+                    <h2>Maquettage</h2>
+                    <h3>Figma</h3>
+                </div>
+            </div>
+            <div class="projet-body">
+                <p class="description">Création d'un design pour une futur application Desktop.</p>
+                <p class="description">Maquettage d'une futur application interne à l'entreprise permettant la gestion des appels.</p>
+                <h4>Technologies utilisées :</h4>
+                <ul class="technologies">
+                    <li>Figma</li>
+                    <li>Canva</li>
+                </ul>
+                <h4>compétences :</h4>
+                <ul class="technologies">
+                    <li>...1</li>
+                    <li>...2</li>
+                    <li>...3</li>
+                </ul>
+                <p class="description"><i>Design créé pour l'entreprise IDConseils pendant mon apprentissage de BTS SIO.</i></p>
+            </div>
+        </div>        
+        <div class="projet" id="projet4">
+            <div class="projet-header">
+                <div class="projet-image">
+                    <img src="../Images/Logo/DotNet.png" alt="DotNet">
+                </div>
+                <div class="projet-title">
+                    <h2>GustavDesktop</h2>
+                    <h3>.Net MAUI</h3>
+                </div>
+            </div>
+            <div class="projet-body">
+                <p class="description">Projet de gestion des récéption d'appels.</p>
+                <p class="description">GustavDesktop est une application de bureau ayant pour but de simplifier les prises d'informations au téléphone.</p>
+                <h4>Technologies utilisées :</h4>
+                <ul class="technologies">
+                    <li>.Net MAUI</li>
+                    <li>Visual Studio</li>
+                    <li>SQL Server</li>
+                    <li>API <i>(Déja existante)</i></li>
+                    <li>GitHub</li>
+                </ul>
+                <h4>compétences :</h4>
+                <ul class="technologies">
+                    <li>...1</li>
+                    <li>...2</li>
+                    <li>...3</li>
+                </ul>
+                <p class="description"><i>Application développée pour l'entreprise IDConseils pendant mon apprentissage de BTS SIO.</i></p>
+                <a href="../Document/CompteRenduGustavDesktop.pdf" target="_blank" class="button">Voir le compte rendu</a>
+            </div>
+        </div>  
+        <div class="projet" id="projet5">
+            <div class="projet-header">
+                <div class="projet-image">
+                    <img src="../Images/Logo/Html.png" alt="DotNet">
+                </div>
+                <div class="projet-title">
+                    <h2>Création de mon portfolio</h2>
+                    <h3>Développement Web</h3>
+                </div>
+            </div>
+            <div class="projet-body">
+                <p class="description">Création de mon Portfolio</p>
+                <h4>Technologies utilisées :</h4>
+                <ul class="technologies">
+                    <li>Visual Studio Code</li>
+                    <li>Html</li>
+                    <li>Css</li>
+                    <li>JavaScript</li>
+                </ul>
+                <h4>compétences :</h4>
+                <ul class="technologies">
+                    <li>...1</li>
+                    <li>...2</li>
+                    <li>...3</li>
+                </ul>
+                <p class="description"><i>osouf-livio.fr</i></p>
+                <a href="https://www.osouf-livio.fr/" target="_blank" class="button">Voir le site</a>
+            </div>
+        </div>
+        <div class="projet" id="projet6">
+            <div class="projet-header">
+                <div class="projet-image">
+                    <img src="../Images/Logo/Html.png" alt="DotNet">
+                </div>
+                <div class="projet-title">
+                    <h2>Création de site web</h2>
+                    <h3>Développement Web</h3>
+                </div>
+            </div>
+            <div class="projet-body">
+                <p class="description">Développement d'un site web pour une association.</p>
+                <h4>Technologies utilisées :</h4>
+                <ul class="technologies">
+                    <li>Visual Studio Code</li>
+                    <li>Html</li>
+                    <li>Css</li>
+                    <li>JavaScript</li>
+                </ul>
+                <h4>compétences :</h4>
+                <ul class="technologies">
+                    <li>...1</li>
+                    <li>...2</li>
+                    <li>...3</li>
+                </ul>
+                <p class="description"><i>association-apres.fr</i></p>
+                <a href="https://association-apres.fr/" target="_blank" class="button">Voir le site</a>
+            </div>
+        </div> 
+        <div class="projet" id="projet7">
+            <div class="projet-header">
+                <div class="projet-image">
+                    <img src="../Images/Logo/Php.png" alt="php">
+                </div>
+                <div class="projet-title">
+                    <h2>Création d'un site web marchand fictif</h2>
+                    <h3>Développement Web</h3>
+                </div>
+            </div>
+            <div class="projet-body">
+                <p class="description">Développement d'un site web marchand fictif permettant de simuler une experience d'achat en ligne complète.</p>
+                <h4>Technologies utilisées :</h4>
+                <ul class="technologies">
+                    <li>PHP</li>
+                    <li>HTML</li>
+                    <li>Css</li>
+                    <li>JavaScript</li>
+                    <li>MySQL</li>
+                </ul>
+                <h4>compétences :</h4>
+                <ul class="technologies">
+                    <li>...1</li>
+                    <li>...2</li>
+                    <li>...3</li>
+                </ul>
+                <p class="description"><i>Site développé pour mon examen pratique du BTS.</i></p>
+                <a href="../Document/OSOUF_Livio_CompteRendu_SiteMarchand.pdf" target="_blank" class="button">Voir le compte rendu</a>
+                <a href="https://osouf-livio.fr/Shop/Accueil/" target="_blank" class="button">Voir le site</a>
+            </div>
+        </div>    
+        <div class="projet" id="projet8">
+            <div class="projet-header">
+                <div class="projet-image">
+                    <img src="../Images/Logo/WPF.png" alt="WPF">
+                </div>
+                <div class="projet-title">
+                    <h2>Création d'une application de gestion</h2>
+                    <h3>Développement d'application Windows en WPF</h3>
+                </div>
+            </div>
+            <div class="projet-body">
+                <p class="description">Développement de la partie administrateur du site web marchand.</p>
+                <h4>Technologies utilisées :</h4>
+                <ul class="technologies">
+                    <li>WPF</li>
+                    <li>MVVM</li>
+                    <li>EntityFramework</li>
+                    <li>C#</li>
+                    <li>Xaml</li>
+                    <li>MySQL</li>
+                </ul>
+                <h4>compétences :</h4>
+                <ul class="technologies">
+                    <li>...1</li>
+                    <li>...2</li>
+                    <li>...3</li>
+                </ul>
+                <p class="description"><i>Application développée pour mon examen pratique du BTS.</i></p>
+                <a href="../Document/CompteRenduGustavMobile.pdf" target="_blank" class="button">Voir le compte rendu</a>
+            </div>
+        </div>  
     </div>
 
     
