--- a/Portfolio/Index.html
+++ b/Portfolio/Index.html
@@ -140,7 +140,7 @@
                                         <li>Xaml</li>
                                         <li>MySQL</li>
                                     </ul>  
-                                    <a href="Error/" target="_blank" class="button">Voir le compte rendu</a>
+                                    <a href="Details/index.html#projet8" target="_blank" class="button">Voir les détails</a>
                                 </div>
                             </div>
                             <img src="Images/Logo/WPF.png" style="border-radius:0;" alt="Projet 8" class="project-image">
@@ -164,7 +164,7 @@
                                     </ul>  
                                     <p><i>osouf-livio.fr/Shop/Accueil/</i></p>
                                     <a href="https://osouf-livio.fr/Shop/Accueil/" target="_blank" class="button">Voir le site</a>
-                                    <a href="Document/OSOUF_Livio_CompteRendu_SiteMarchand.pdf" target="_blank" class="button">Voir le compte rendu</a>
+                                    <a href="Details/index.html#projet7" target="_blank" class="button">Voir les détails</a>
                                 </div>
                             </div>
                             <img src="Images/Logo/Php.png" alt="Projet 7" class="project-image">
@@ -184,6 +184,7 @@
                                     </ul>  
                                     <p><i>association-apres.fr</i></p>
                                     <a href="https://association-apres.fr/" target="_blank" class="button">Voir le site</a>
+                                    <a href="Details/index.html#projet6" target="_blank" class="button">Voir les détails</a>
                                 </div>
                             </div>
                             <img src="Images/Logo/Html.png" alt="Projet 6" class="project-image">
@@ -193,9 +194,9 @@
                                 <span class="toggle-text">Voir plus</span>
                             </div>
                             <div class="project-content">
-                                <h3>Création de site web</h3>
+                                <h3>Création de mon portfolio</h3>
                                 <h4>Développement Web</h4>
-                                <p>Maquettage et Création de mon Portfolio</p>
+                                <p>Création de mon Portfolio</p>
                                 <div class="project-details" style="display: none;">
                                     <h4>Technologies utilisées</h4>
                                     <ul>
@@ -203,6 +204,7 @@
                                         <li>Visual studio code</li>
                                     </ul> 
                                     <p><i>osouf-livio.fr</i></p> 
+                                    <a href="Details/index.html#projet5" target="_blank" class="button">Voir les détails</a>
                                 </div>
                             </div>
                             <img src="Images/Logo/Html.png" alt="Projet 5" class="project-image">
@@ -225,7 +227,7 @@
                                     </ul>  
                                     <p>GustavDesktop est une application de bureau ayant pour but de simplifier les prises d'informations au téléphone.</p>
                                     <p><i>Application développer pour l'entreprise IDConseils pendant mon apprentissage.</i></p>
-                                    <a href="Document/CompteRenduGustavDesktop.pdf" target="_blank" class="button">Voir le compte rendu</a>
+                                    <a href="Details/index.html#projet4" target="_blank" class="button">Voir les détails</a>
                                 </div>
                             </div>
                             <img src="Images/Logo/DotNet.png" alt="Projet 4" class="project-image">
@@ -244,7 +246,8 @@
                                         <li>Figma</li>
                                         <li>Canva <i>(Pour les design de fond)</i></li>
                                     </ul>      
-                                    <p><i>Pour l'entreprise IDConseils pendant mon apprentissage.</i></p>                              
+                                    <p><i>Pour l'entreprise IDConseils pendant mon apprentissage.</i></p>   
+                                    <a href="Details/index.html#projet3" target="_blank" class="button">Voir les détails</a>                           
                                 </div>
                             </div>
                             <img src="Images/Logo/Figma.png" alt="Projet 3" class="project-image">
@@ -267,7 +270,7 @@
                                     </ul>
                                     <p>GustavMobile est une adaption en application Android d'une application web déjà existante permettant de gérer les interventions de l'entreprise mais aussi les employés en général.</p>
                                     <p><i>Application développer pour l'entreprise IDConseils pendant mon apprentissage.</i></p>
-                                    <a href="Document/CompteRenduGustavMobile.pdf" target="_blank" class="button">Voir le compte rendu</a>
+                                    <a href="Details/index.html#projet2" target="_blank" class="button">Voir les détails</a>
                                 </div>
                             </div>
                             <img src="Images/Logo/DotNet.png" alt="Projet 2" class="project-image">
@@ -287,7 +290,7 @@
                                         <li>Instalation d'un windows</li>
                                     </ul>  
                                     <p><i>Assemblage et instalation d'un pc pour mon usage personel.</i></p>
-                                    <a href="Details/index.html#projet1" target="_blank" class="button">Voir le compte rendu</a>
+                                    <a href="Details/index.html#projet1" target="_blank" class="button">Voir les détails</a>
                                 </div>
                             </div>
                             <img src="Images/Logo/PC.png" alt="Projet 1" class="project-image">
