--- a/Portfolio/Details/index.html
+++ b/Portfolio/Details/index.html
@@ -6,6 +6,7 @@
     <title>Projets</title>
     <link rel="stylesheet" href="../CSS/StyleAccueil.css">
     <link rel="stylesheet" href="../CSS/StyleDetails.css">
+    <link rel="stylesheet" href="../CSS/Carrousel.css">
     <link rel="icon" href="../Images/Logo/Dev.png" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -248,6 +249,23 @@
                 <a href="../Document/OSOUF_Livio_CompteRendu_SiteMarchand.pdf" target="_blank" class="button">Voir le compte rendu</a>
                 <a href="https://osouf-livio.fr/Shop/Accueil/" target="_blank" class="button">Voir le site</a>
             </div>
+            <div class="container_carrousel">
+                <input type="radio" name="slider" id="item-1" checked>
+                <input type="radio" name="slider" id="item-2">
+                <input type="radio" name="slider" id="item-3">
+              <div class="cards">
+                <label class="card" for="item-1" id="song-1">
+                  <img src="../Images/Commandes-site.png" alt="song">
+                </label>
+                <label class="card" for="item-2" id="song-2">
+                  <img src="../Images/Panier-site.png" alt="song">
+                </label>
+                <label class="card" for="item-3" id="song-3">
+                  <img src="../Images/Produit-Site.png" alt="song">
+                </label>
+              </div>
+            </div> 
+            <img class="img-bonus" src="../Images/BDD-projet.png">
         </div>    
         <div class="projet" id="projet8">
             <div class="projet-header">
@@ -279,6 +297,23 @@
                 <p class="description"><i>Application développée pour mon examen pratique du BTS.</i></p>
                 <a href="../Document/CompteRenduGustavMobile.pdf" target="_blank" class="button">Voir le compte rendu</a>
             </div>
+            <div class="container_carrousel">
+                <input type="radio" name="slider" id="item-1" checked>
+                <input type="radio" name="slider" id="item-2">
+                <input type="radio" name="slider" id="item-3">
+              <div class="cards">
+                <label class="card" for="item-1" id="song-1">
+                  <img src="../Images/Commandes-App.png" alt="song">
+                </label>
+                <label class="card" for="item-2" id="song-2">
+                  <img src="../Images/Produit-App.png" alt="song">
+                </label>
+                <label class="card" for="item-3" id="song-3">
+                  <img src="../Images/User-App.png" alt="song">
+                </label>
+              </div>
+            </div> 
+            <img class="img-bonus" src="../Images/BDD-projet.png">
         </div>  
     </div>
 
