--- a/Portfolio/Details/index.html
+++ b/Portfolio/Details/index.html
@@ -303,13 +303,13 @@
                 <input type="radio" name="slider" id="item-3">
               <div class="cards">
                 <label class="card" for="item-1" id="song-1">
-                  <img src="../Images/Commandes-App.png" alt="song">
+                  <img src="../Images/Commandes-App.png" alt="Image1">
                 </label>
                 <label class="card" for="item-2" id="song-2">
-                  <img src="../Images/Produit-App.png" alt="song">
+                  <img src="../Images/Produit-App.png" alt="Image2">
                 </label>
                 <label class="card" for="item-3" id="song-3">
-                  <img src="../Images/User-App.png" alt="song">
+                  <img src="../Images/User-App.png" alt="Image3">
                 </label>
               </div>
             </div> 
